--- a/BlazorWithIdentity.Client/BlazorWithIdentity.Client.csproj
+++ b/BlazorWithIdentity.Client/BlazorWithIdentity.Client.csproj
@@ -10,14 +10,20 @@
     <LangVersion>7.3</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
   </PropertyGroup>
-
+  
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.0.0-preview7.19365.7" />
+    <PackageReference Include="BlazorStrap" Version="1.0.0-preview7-01" />
+    <PackageReference Include="Humanizer" Version="2.6.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.0.100-preview8-013656" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.0.0-preview7.19365.7" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorWithIdentity.Shared\BlazorWithIdentity.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Shared\Components\" />
   </ItemGroup>
 
 </Project>
