--- a/BlazorWithIdentity.Shared/BlazorWithIdentity.Shared.csproj
+++ b/BlazorWithIdentity.Shared/BlazorWithIdentity.Shared.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Humanizer" Version="2.6.2" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0-preview7.19362.9" />
   </ItemGroup>
 
